Task instance Java/109